[package]
name = "veilid-iroh-blobs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-stream = "0.3.5"
# backtrace-on-stack-overflow = "0.3.0"
bytes = "1.6.1"
futures-lite = "2.3.0"
futures-util = "0.3.30"
iroh-blobs = "0.24.0"
iroh-io = "0.6.1"
# futures-lite = "2.3.0"
# iroh-blobs = "0.23.0"
# serde = "1.0.207"
# tmpdir = "1.0.0"
tokio = {version = "~1.39", features = ["full", "tracing"]}
tokio-stream = "0.1.16"
tracing = "0.1.40"
veilid-core = { git = "https://gitlab.com/veilid/veilid.git", branch = "main" }
